# noiz-launchpad

./: .env  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
anchor-program/: Anchor.toml  README.md
anchor-program/programs/audio_token_platform/: Cargo.toml
anchor-program/programs/audio_token_platform/src/: lib.rs
public/: sw.js
src/: App.tsx  index.css
src/components/: CTASection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  MobileTabBar.tsx  Navbar.tsx  RemixModal.tsx  SocialShareButton.tsx
src/components/explore/: ClipsTab.tsx
src/components/ui/: button.tsx
src/hooks/: usePriceAlerts.ts  usePushNotifications.ts  useSolPrice.ts  useSolanaSubscription.ts
src/integrations/supabase/: types.ts
src/lib/: pinata.ts  taskUtils.ts
src/lib/solana/: createToken.ts  fetchTokens.ts  idl.ts  program.ts
src/pages/: Admin.tsx  Create.tsx  Discover.tsx  Explore.tsx  Index.tsx  Leaderboard.tsx  Portfolio.tsx  Profile.tsx  Tokens.tsx  Trade.tsx
supabase/: config.toml
supabase/functions/devnet-faucet/: index.ts
supabase/functions/execute-trade/: index.ts
supabase/functions/get-vapid-key/: index.ts
supabase/migrations/: 20251208052410_76fd63da-4267-46da-86f1-b5f35d854a41.sql  20251208052416_6dfd7188-fa83-4dc9-b9f9-b2c2ac9553f8.sql  20251209093002_d86399df-908f-4060-a608-b6d625f1a523.sql  20251213130326_336a0b2a-781c-4ad9-a80c-516740d23c67.sql  20251223193409_77db867e-2255-4ce9-9710-1bcbd12e8336.sql  20251228141923_a932fdf9-bd03-47a9-a396-78606c7112ad.sql
(+3 files in other folders)
