[package]
name = "audio_token_platform"
version = "0.1.0"
description = "Audio Token Platform - Bonding Curve Token Creation and Trading"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "audio_token_platform"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
